additional extra option validators

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -3248,7 +3248,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div>ffmpeg extra options (not validated).</div>
-            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase IOS compatibility</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase iOS compatibility</div>
         </div>
     </div>
 
@@ -3341,7 +3341,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div>ffmpeg extra options (not validated).</div>
-            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase IOS compatibility</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> "-level 3.1" can reduce artifacts and increase iOS compatibility</div>
         </div>
     </div>
 
