--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -6669,6 +6669,7 @@ var camera_id = {{ camera_id }};
             <div><a href="https://docs.aws.amazon.com/general/latest/gr/s3.html" class="text-decoration-none link-info" target="_blank">AWS S3 Regions</a> (scroll on table)</div>
             <div><a href="https://docs.oracle.com/en-us/iaas/api/#/en/objectstorage/20160918/" class="text-decoration-none link-info" target="_blank">OCI Storage Regions</a></div>
             <div>Not used with GCP</div>
+            <div>Use "auto" for Cloudflare R2</div>
             <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Not validated</div>
         </div>
     </div>
