new lens for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -37,7 +37,8 @@ var icd = {
     '7artisans_f2.8_4.0mm_4-3' :    12.37,
     'laowa_f2.8_4.0mm_4-3' :        13.4,
     'cil505_f2.2_4.9mm' :           14.2,
-    'cs-2.5ir_8mp_-f_f1.6_2.5mm_2-3' : 6.4,
+    'cs-2.5ir_8mp_-f_f1.6_2.5mm_2-3' :      6.4,
+    'wgwk-3130-a1_m12_f1.8_1.91mm_1-2.3' :  6.4,
 }
 
 //   '64mphawkeye_f1.8_5.1mm_1-1.7' : 0.0,
