new lens for simulator

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -39,6 +39,7 @@ var icd = {
     'cil505_f2.2_4.9mm' :           14.2,
     'cs-2.5ir_8mp_-f_f1.6_2.5mm_2-3' :      6.4,
     'wgwk-3130-a1_m12_f1.8_1.91mm_1-2.3' :  6.4,
+    'sunex_dsl215_m12_f2.0_1.55mm_1-2' :    4.7,
 }
 
 //   '64mphawkeye_f1.8_5.1mm_1-1.7' : 0.0,
