--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2962,10 +2962,8 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__LOAD_INTERVAL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__LOAD_INTERVAL(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__LOAD_INTERVAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__LOAD_INTERVAL(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__LOAD_INTERVAL-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8"></div>
     </div>
@@ -2975,12 +2973,43 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_URL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-5">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__A_URL(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__A_URL-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__A_URL(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_URL-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-5"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_IMAGE_FILE_TYPE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_IMAGE_FILE_TYPE(class='form-select bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_IMAGE_FILE_TYPE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_USERNAME.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_USERNAME(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_USERNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_PASSWORD.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_OVERLAY__A_PASSWORD(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_PASSWORD-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
     </div>
 
     <div class="form-group row">
@@ -2988,10 +3017,8 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_WIDTH.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__A_WIDTH(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__A_WIDTH-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__A_WIDTH(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_WIDTH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8"></div>
     </div>
@@ -3001,10 +3028,8 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_HEIGHT.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__A_HEIGHT(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__A_HEIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__A_HEIGHT(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_HEIGHT-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8"></div>
     </div>
@@ -3014,10 +3039,8 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_X.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__A_X(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__A_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__A_X(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8"></div>
     </div>
@@ -3027,10 +3050,8 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_Y.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            <div class="form-switch">
-                {{ form_config.IMAGE_OVERLAY__A_Y(class='form-control bg-secondary') }}
-                <div id="IMAGE_OVERLAY__A_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
-            </div>
+            {{ form_config.IMAGE_OVERLAY__A_Y(class='form-control bg-secondary') }}
+            <div id="IMAGE_OVERLAY__A_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8"></div>
     </div>
@@ -9655,6 +9676,9 @@ const field_names = [
     'LIGHTGRAPH_OVERLAY__OPENCV_FONT_SCALE',
     'IMAGE_OVERLAY__LOAD_INTERVAL',
     'IMAGE_OVERLAY__A_URL',
+    'IMAGE_OVERLAY__A_IMAGE_FILE_TYPE',
+    'IMAGE_OVERLAY__A_USERNAME',
+    'IMAGE_OVERLAY__A_PASSWORD',
     'IMAGE_OVERLAY__A_WIDTH',
     'IMAGE_OVERLAY__A_HEIGHT',
     'IMAGE_OVERLAY__A_X',
