--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2954,7 +2954,9 @@ var camera_id = {{ camera_id }};
                 <div id="IMAGE_OVERLAY__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Use a remote image as an overlay (weather maps, etc)</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -3020,7 +3022,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_WIDTH(class='form-control bg-secondary') }}
             <div id="IMAGE_OVERLAY__A_WIDTH-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Image will be resized to this specification</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -3042,7 +3046,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_X(class='form-control bg-secondary') }}
             <div id="IMAGE_OVERLAY__A_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Negative is offset from the right side of image</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -3053,7 +3059,9 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_OVERLAY__A_Y(class='form-control bg-secondary') }}
             <div id="IMAGE_OVERLAY__A_Y-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8"></div>
+        <div class="col-sm-8">
+            <div>Negative is offset from the bottom of image</div>
+        </div>
     </div>
 
     <hr>
