--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4504,6 +4504,35 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CIRCULAR_DISPLAY__ENABLE.label }}
+        </div>
+        <div class="col-sm-2">
+            <div class="form-switch">
+                {{ form_config.CIRCULAR_DISPLAY__ENABLE(class='form-check-input') }}
+                <div id="CIRCULAR_DISPLAY__ENABLE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <div>Generate an image for a circular display</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CIRCULAR_DISPLAY__RESOLUTION.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CIRCULAR_DISPLAY__RESOLUTION(class='form-select bg-secondary') }}
+            <div id="CIRCULAR_DISPLAY__RESOLUTION-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CAPTURE_HOOK_PRE.label(class='col-form-label') }}
         </div>
         <div class="col-sm-5">
@@ -9700,6 +9729,7 @@ const field_names = [
     'FISH2PANO__DIRS_OFFSET_BOTTOM',
     'FISH2PANO__OPENCV_FONT_SCALE',
     'FISH2PANO__PIL_FONT_SIZE',
+    'CIRCULAR_DISPLAY__RESOLUTION',
     'IMAGE_EXPORT_RAW',
     'IMAGE_EXPORT_FOLDER',
     'IMAGE_STACK_METHOD',
@@ -10089,6 +10119,7 @@ const checkbox_field_names = [
     'FISH2PANO__ENABLE',
     'FISH2PANO__FLIP_H',
     'FISH2PANO__ENABLE_CARDINAL_DIRS',
+    'CIRCULAR_DISPLAY__ENABLE',
     'IMAGE_ROTATE_KEEP_SIZE',
     'IMAGE_EXPORT_FLIP_V',
     'IMAGE_EXPORT_FLIP_H',
