--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4529,6 +4529,19 @@ var camera_id = {{ camera_id }};
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CIRCULAR_DISPLAY__IMAGE_CIRCLE_DIAMETER.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CIRCULAR_DISPLAY__IMAGE_CIRCLE_DIAMETER(class='form-control bg-secondary') }}
+            <div id="CIRCULAR_DISPLAY__IMAGE_CIRCLE_DIAMETER-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Uses image circle offsets on the Location tab</div>
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -9730,6 +9743,7 @@ const field_names = [
     'FISH2PANO__OPENCV_FONT_SCALE',
     'FISH2PANO__PIL_FONT_SIZE',
     'CIRCULAR_DISPLAY__RESOLUTION',
+    'CIRCULAR_DISPLAY__IMAGE_CIRCLE_DIAMETER',
     'IMAGE_EXPORT_RAW',
     'IMAGE_EXPORT_FOLDER',
     'IMAGE_STACK_METHOD',
