add link to circular display image

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4513,7 +4513,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div>Generate an image for a circular display</div>
+            <div>Generate an image for a circular display - <a href="images/circular_display.jpg" class="text-decoration-none link-info" target="_blank">Link</a> </div>
         </div>
     </div>
 
